<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Friends Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile">Mobile</string>
    <string name="title_activity_recycle_view">RecycleView</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_nvigation">Nvigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hintEmail">Email</string>
    <string name="facebook_app_id">521429271587864</string>
    <string name="fb_login_protocol_scheme">fb521429271587864</string>


    <string name="twitter_consumer_key" translatable="false">ueJEB6bmw7bxNlgIbqWwIV6mB</string>
    <string name="twitter_consumer_secret" translatable="false">osQrQuGBD8ya7Fe6MoNWHOtsXJo4UyFP8siOKhX8RTIGBWXkZa
</string>

    <string name="textfreind">Enter  Email </string>
    <string name="add">Add Your Friend</string>
    <string name="sendMessage">Send</string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="Direction">Directions</string>
    <string name="Startdirection">Start Movie</string>
    <string name="textshare">Turn off Location Sharing</string>
    <string name="Snackbar">No One Can See Your Location Now!</string>
    <string name="Drawww">Direction</string>
    <string name="Animat">Animation</string>
    <string name="Call">Chat</string>
    <string name="Phone">Verifying Your Phone Number</string>
    <string name="call">Verfiy</string>
    <string name="FACEBOOK_APP_ID">521429271587864</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">5dcc68ade9d5a93344d2b27f2f522f07
</string>
    <string name="warrning">Kindly read our instructions : </string>
    <string name="warrning2">This message will appear for one Time </string>
    <string name="warrning3">To ensure Your Safety you should follow some steps . </string>
    <string name="warrning4"> First : insert Your pin  and confirm it to activate your emergency messege</string>
    <string name="warrning5"> Second : insert your top contacts which Emergency message will send to them in danger case</string>
    <string name="warrning6">Note : You Cant Modifcation the people that You Are Chosen , Be Sure First before You Choose them</string>
    <string name="warrning7"> Message Will be like That : </string>
    <string name="warrning8">I am in trouble please Help Me, And it Will Contain Address, City, Date  , Time</string>
    <string name="warrning9">Before Send it You must be sure that You Are turn on Gbs At this time to get Your Location </string>
    <string name="secretnumber">Enter Your Pin</string>
    <string name="save">Save</string>
    <string name="Watningmessage">Emergency Message</string>
    <string name="choose">Select Your Friends</string>
    <string name="Finish">Finish</string>
    <string name="agree">Agree</string>
    <string name="Letschoose">Select</string>
    <string name="welceommessage">Welcome All </string>
    <string name="welcome1">Emergency messages is a method of asking for help in danger cases. </string>
    <string name="welcome2"> We presented it in our free app which can by it you and your darlings send to each other to ask for help in any problem you face.</string>
    <string name="btnimergency">Send Emergency Message</string>
    <string name="skiip">Skip</string>
    <string name="pin">Enter Your  Pin</string>
    <string name="mesge">Iam in trouble please help me</string>
    <string name="isslect">is Selected</string>
    <string name="appwidget_text">Emergency Message</string>
    <string name="already">Already have an account?</string>
    <string name="signin">Sign in</string>
    <string name="createacc">CREATE ACCOUNT</string>
    <string name="regist">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pas">Password</string>
    <string name="email2">Email :</string>
    <string name="reset">Reset</string>
    <string name="time">Time : </string>
    <string name="date">Date :</string>
    <string name="location">Location:</string>
    <string name="sendMessage2">Send Message</string>
    <string name="availble">Active Now</string>
    <string name="donthave">Dont have account?</string>
    <string name="signup">Sign Up</string>
    <string name="wlcome">WeLcome</string>
    <string name="Login">Login</string>
    <string name="remember">Remember Me</string>
    <string name="forget">Forget Password</string>
    <string name="friendsloc">My Friends Location</string>
    <string name="home">Home</string>
    <string name="freid">Friends</string>
    <string name="denger">Emergency Message</string>
    <string name="logout">Log out</string>
    <string name="freinds">Friends</string>
    <string name="reqests">Requests</string>
    <string name="errornumber">Secret Number Should be 4 Numbers</string>
    <string name="cancel">Cancel</string>
    <string name="details">More Details</string>
    <string name="search">Search</string>
    <string name="Add">Add your Friends</string>
    <string name="namee">Enter Your Name </string>
    <string name="invalidemail">Invalid Email</string>
    <string name="enterpas">Enter Password</string>
    <string name="verfiymail">Verification email sent to</string>
    <string name="alreadyuser">Email Already Used </string>
    <string name="fullinform">FuLL Your Information Fiirst</string>
    <string name="confirm">CONFIRM</string>
    <string name="delete">DELETE</string>
    <string name="reseet">Reset password code has been emailed to</string>
    <string name="invalidemaail">Invalid Email , try later</string>
    <string name="invalidysandpas">Invalid User name or Password</string>
    <string name="locationshre">Request You to open Your location Share</string>
    <string name="contact">Contacts</string>
    <string name="invitefriends">Invite Friends</string>
    <string name="share">Social Media</string>
    <string name="invite">Invite Your Friends</string>
    <string name="alert">The Emergency message  sent successfully</string>
    <string name="transport">Nearest Places</string>
    <string name="bus">Bus Station</string>
    <string name="train">Train Station</string>
    <string name="taxi">Taxi Station</string>
    <string name="Nearestplaces">Nearest Places</string>
    <string name="myloc">My location</string>
    <string name="friendloc">Friends location</string>
    <string name="spinner_title">Friends</string>
    <string name="doctor">Doctor</string>
    <string name="hospital">Hospital</string>
    <string name="pharmcy">Pharmcy</string>
    <string name="poilce">Police Sٍtation</string>
    <string name="cofe">Cofe</string>
    <string name="Search">Search</string>
    <string name="reduis">Reduis</string>
    <string name="gbsmessage">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="info">Gbs Setting</string>
    <string name="ok">Delete</string>
    <string name="deletefriend">Do You Want to Delete Your Friend ?</string>
    <string name="turnof">Turn off Location Share</string>
    <string name="askhim">"Do You Want To Request him/her To Open location Share ?"</string>
    <string name="Nointernet">No Internet Available</string>
    <string name="useralready">User Already Your Friend</string>
    <string name="requestsentAlready">Request Already Sent</string>
    <string name="requestsent">Sending Request</string>
    <string name="nolocation">Location not available</string>
    <string name="shareloc">Canot Access Your Location</string>
    <string name="Sharelocation">Can See Your Location Now</string>
    <string name="LocationShare">Share Your Location</string>
    <string name="inavailble">Not Available</string>
</resources>
