<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/welcome"
    android:layout_height="match_parent"
    android:background="@drawable/wr"
    tools:context="com.gbstracking.gbstracking.Warning.welcomewarning">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="3dp">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:id="@+id/too"
            app:popupTheme="@style/PopupOverlay"
            android:background="#fff"
            android:layout_height="?android:attr/actionBarSize">
            <TextView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:text="@string/Watningmessage"
                android:layout_marginLeft="@dimen/_50sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="#747474"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/warn"
                android:layout_marginLeft="@dimen/_20sdp"
                />
        </android.support.v7.widget.Toolbar>
    </android.support.v7.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_below="@+id/card">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card2"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="#e6e2e2"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:id="@+id/Ral"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/_15sdp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/welceommessage"
                            android:textColor="#f40c0c"
                            android:id="@+id/warn1"
                            android:layout_centerHorizontal="true"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome1"
                            android:layout_below="@+id/warn1"
                            android:textColor="#58355E"
                            android:id="@+id/warn2"
                            android:layout_marginTop="@dimen/_8sdp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome2"
                            android:layout_below="@+id/warn2"
                            android:textColor="#58355E"
                            android:id="@+id/warn4"
                            android:layout_marginTop="@dimen/_5sdp"
                            />


                    </RelativeLayout>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/skiip"
                android:id="@+id/skip"
                android:layout_centerHorizontal="true"
                android:textColor="#646363"
                android:textSize="@dimen/_14sdp"
                android:background="@drawable/bceditsecretnumber"
                android:textAllCaps="false"
                android:textStyle="italic"
                android:layout_below="@+id/card2"
                android:layout_marginTop="@dimen/_80sdp"
                />
        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>
