<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:id="@+id/warnmessage"
    tools:context="com.gbstracking.warrningmessage">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="2dp">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:id="@+id/toolb"
            app:popupTheme="@style/PopupOverlay"
            android:background="#fff"

            android:layout_height="?android:attr/actionBarSize">
            <TextView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:text="@string/Watningmessage"
                android:layout_marginLeft="@dimen/_50sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="#747474"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/warn"
                android:layout_marginLeft="@dimen/_20sdp"
                />
        </android.support.v7.widget.Toolbar>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:paddingTop="@dimen/_50sdp"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:id="@+id/Ral2"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="7dp">
                <RelativeLayout
                    android:layout_width="@dimen/_220sdp"
                    android:layout_below="@+id/Ral"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pin"
                        android:textColor="#58355E"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:id="@+id/scret"
                        />

                    <EditText
                        android:layout_width="@dimen/_130sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_centerHorizontal="true"
                        android:paddingRight="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_20sdp"
                        android:background="@drawable/bcpin"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_below="@+id/scret"
                        android:id="@+id/editnumber"
                        android:maxLength="4"
                        android:inputType="number"
                        android:textColor="#000"
                        />
                    <Button
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/save"
                        android:background="@drawable/bceditsecretnumber"
                        android:textAllCaps="false"
                        android:layout_below="@+id/editnumber"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:textSize="@dimen/_13sdp"
                        android:textColor="#58355E"
                        android:textStyle="italic"
                        android:id="@+id/btnsave"
                        />
                </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:id="@+id/Ra"
            app:cardBackgroundColor="@android:color/white"
            android:layout_below="@+id/Ral2"
            android:layout_marginTop="@dimen/_20sdp"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            app:cardElevation="7dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_below="@+id/Ral2"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/Ral3"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textColor="#58355E"
                        android:textStyle="italic"
                        android:id="@+id/cho"
                        />
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_friendname"
                        android:scrollbars="vertical"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_below="@+id/cho"
                        android:layout_height="@dimen/_300sdp"/>
                </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:id="@+id/Ra2"
            android:layout_below="@+id/Ral2"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="7dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:id="@+id/Ral4"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warrning6"
                        android:textColor="#58355E"
                        android:id="@+id/warn7"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/_10sdp"
                        android:textSize="@dimen/_12sdp"
                        />
                    <Button
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/Letschoose"
                        android:background="@drawable/bceditsecretnumber"
                        android:textAllCaps="false"
                        android:layout_below="@+id/warn7"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textSize="@dimen/_13sdp"
                        android:textColor="#58355E"
                        android:textStyle="italic"
                        android:id="@+id/btnchoose"
                        />

                </RelativeLayout>
        </android.support.v7.widget.CardView>

                <Button
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:text="@string/Finish"
                    android:id="@+id/finish"
                    android:layout_centerHorizontal="true"
                    android:textColor="#646363"
                    android:textSize="@dimen/_14sdp"
                    android:background="@drawable/bceditsecretnumber"
                    android:textAllCaps="false"
                    android:textStyle="italic"
                    android:layout_below="@+id/Ral2"
                    android:layout_marginTop="@dimen/_220sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    />



    </RelativeLayout>
</FrameLayout>
